# UltimateGraphApp

./: .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphAlgorithms.cpp  GraphAlgorithms.h  GraphWidget.cpp  GraphWidget.h  Vertex.cpp  Vertex.h  VertexInputDialog.cpp  VertexInputDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  startmenu.cpp  startmenu.h
